SR-65: data load done

--- a/src/app/service/service-initializer/service-branch-block/service-branch-block.component.html
+++ b/src/app/service/service-initializer/service-branch-block/service-branch-block.component.html
@@ -2,6 +2,6 @@
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
-  [(data)]="schemaData"
+  [data]="schemaData"
   (onSubmit)="addToFlow($event)">
 </json-schema-form>
