--- a/src/app/service/service-initializer/service-function-block/service-function-block.component.html
+++ b/src/app/service/service-initializer/service-function-block/service-function-block.component.html
@@ -2,7 +2,7 @@
   loadExternalAssets="false"
   [schema]="jsonSchemaForm"
   framework="bootstrap-4"
-  [(data)]="schemaData"
+  [data]="schemaData"
   (onSubmit)="addToFlow($event)"
   (onChanges)="getClass($event)">
 </json-schema-form>
