--- a/src/app/service/service-initializer/service-initializer.component.html
+++ b/src/app/service/service-initializer/service-initializer.component.html
@@ -1,9 +1,14 @@
 <div class="wrapper wrapper-content">
 
   <div class="row">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
+    <div class=" row ibox float-e-margins">
+      <div class="col-md-3 ibox-title">
         <h5>Service Initializer</h5>
+      </div>
+      <div class="col-md-9">
+        <div class="alert {{alertType}}">
+          <strong>Danger!</strong> {{notification}}
+        </div>
       </div>
 
     </div>
