--- a/src/app/_layout/app/main/left-navigation/left-navigation.component.html
+++ b/src/app/_layout/app/main/left-navigation/left-navigation.component.html
@@ -20,17 +20,42 @@
           IN+
         </div>
       </li>
-      <!--<li class="">-->
-        <!--<a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Admin</span> <span class="fa arrow"></span></a>-->
-        <!--<ul class="nav nav-second-level">-->
-          <!--<li class="active"><a routerLink="/user/list">User</a></li>-->
-          <!--<li class="active"><a routerLink="/user/form">User Create</a></li>-->
-        <!--</ul>-->
-      <!--</li>-->
+
+
+      <!--<li class="">
+        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Admin</span> <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li class="active"><a routerLink="/user/list">User</a></li>
+          <li class="active"><a routerLink="/user/form">User Create</a></li>
+        </ul>
+      </li>-->
+
 
       <li class="">
-        <a href="/service/service-list"><i class="fa fa-th-large"></i> <span class="nav-label">Service List</span></a>
+        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Configuration</span> <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li class="active"><a routerLink="/configuration/configuration-initializer">New</a></li>
+          <li class="active"><a routerLink="/configuration">List</a></li>
+        </ul>
       </li>
+
+      <li class="">
+        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Service</span> <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li class="active"><a routerLink="/service/service-initializer">New</a></li>
+          <li class="active"><a routerLink="/service/service-list">List</a></li>
+        </ul>
+      </li>
+
+
+
+
+      <!-- <li class="">
+        <a href="/configuration"><i class="fa fa-th-large"></i> <span class="nav-label">Configuration</span></a>
+      </li>
+      <li class="">
+        <a href="/service/service-list"><i class="fa fa-th-large"></i> <span class="nav-label">Service List</span></a>
+      </li>-->
 
     </ul>
 
