--- a/src/app/configuration/configuration-initializer/configuration-initializer.component.html
+++ b/src/app/configuration/configuration-initializer/configuration-initializer.component.html
@@ -64,21 +64,35 @@
                   </div>
 
                   <div class="panel-body" [formGroupName]="j">
+
                     <div class="row">
-                      <div class="col-md-2"><label>firstKey</label></div>
-                      <div class="col-md-10"><input type="text" class="form-control" formControlName="firstKey"></div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-2"><label>gegEx</label></div>
-                      <div class="col-md-10"><input type="text" class="form-control" formControlName="regEx"></div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-2"><label>full Match</label></div>
-                      <div class="col-md-10"><input type="checkbox" id="fullMatch" value="1" formControlName="fullMatch" /></div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-2"><label>ignoreCase</label></div>
-                      <div class="col-md-10"><input type="checkbox" id="ignoreCase" value="1" formControlName="ignoreCase" /></div>
+
+                      <div class="col-md-3">
+                        <div class="row">
+                          <div class="col-md-3"><label>firstKey</label></div>
+                          <div class="col-md-9"><input type="text" class="form-control" formControlName="firstKey"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="row">
+                          <div class="col-md-3"><label>gegEx</label></div>
+                          <div class="col-md-9"><input type="text" class="form-control" formControlName="regEx"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="row">
+                          <div class="col-md-5"><label style="float: right">full Match</label></div>
+                          <div class="col-md-7"><input type="checkbox" style="float: left" id="fullMatch" value="1" formControlName="fullMatch" /></div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="row">
+                          <div class="col-md-5"><label style="float: right">ignoreCase</label></div>
+                          <div class="col-md-7"><input type="checkbox" style="float: left" id="ignoreCase" value="1" formControlName="ignoreCase" /></div>
+                        </div>
+                      </div>
+
+
                     </div>
 
                   </div>
