SR-65: EOD Commit

--- a/src/app/configuration/configuration.component.css
+++ b/src/app/configuration/configuration.component.css
@@ -17,7 +17,7 @@
 }
 
 /* Style the accordion panel. Note: hidden by default */
-.panel {
+.panel1 {
   padding: 0 18px;
   background-color: white;
   display: none;
