--- a/src/app/configuration/configuration-initializer/configuration-initializer.component.css
+++ b/src/app/configuration/configuration-initializer/configuration-initializer.component.css
@@ -17,9 +17,9 @@
 }
 
 /* Style the accordion panel. Note: hidden by default */
-.panel1 {
+/*.panel2 {
   padding: 0 18px;
   background-color: white;
   display: none;
   overflow: hidden;
-}
+}*/
