Create new service creator component

--- a/src/app/_layout/app/main/left-navigation/left-navigation.component.html
+++ b/src/app/_layout/app/main/left-navigation/left-navigation.component.html
@@ -48,6 +48,10 @@
       </li>
 
 
+      <li class="">
+        <a href="/configuration/configuration-form"><i class="fa fa-th-large"></i> <span class="nav-label">Configuration Form</span></a>
+      </li>
+
 
 
       <!-- <li class="">
