--- a/src/app/configuration/configuration-form/configuration-form.component.html
+++ b/src/app/configuration/configuration-form/configuration-form.component.html
@@ -13,6 +13,9 @@
       <div class="ibox">
         <div class="ibox-content">
 
+          <div class="row">
+
+          </div>
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
