SR-65: calling new rest endpoints to get all with full data

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -28,7 +28,7 @@
                 <td>{{ service.description }}</td>
                 <td>
                   <a title="Edit Service">
-                    <button type="button" class="btn button-shadow btn-edit" (click)="editService(service.id)">
+                    <button type="button" class="btn button-shadow btn-edit" (click)="editService(service.serviceId)">
                       <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </button>
                   </a>
