--- a/src/app/configuration/configuration-initializer/configuration-initializer.component.html
+++ b/src/app/configuration/configuration-initializer/configuration-initializer.component.html
@@ -74,15 +74,12 @@
                               <div class="row">
                                 <div class="col-sm-12">
 
-                                  <div class="panel-group" id="{{i}}">
+                                  <div class="panel-group" id="accordion{{i}}">
+
                                     <div *ngFor="let keyWordSet of actions.controls.keyWordFromDtos.controls; let j=index" class="panel panel-success">
-<button (click)="test1Click(actions)"></button>
-                                      {{test1Click1(actions)}}
-                                      {{varId}}
                                       <div class="panel-heading">
                                         <h5 class="panel-title">
-
-                                          <a data-toggle="collapse" data-parent='#{{j}}' href="#collapseTwo{{j}}"><span>Key Sets {{j + 1}}</span></a>
+                                          <a data-toggle="collapse" attr.data-parent="#accordion{{i}}" href="#collapseTwo_{{i}}_{{j}}"><span>Key Sets {{j + 1}}</span></a>
                                           <a class="close-link pull-right" *ngIf="actions.controls.keyWordFromDtos.controls.length > 1" (click)="removeKeySet(j)">
                                             <i class="fa fa-times"></i>
                                           </a>
@@ -90,7 +87,7 @@
 
                                       </div>
 
-                                      <div id="collapseTwo{{j}}" class="panel-collapse collapse">
+                                      <div id="collapseTwo_{{i}}_{{j}}" class="panel-collapse collapse">
                                         <div class="panel-body" [formGroupName]="j">
 
                                           <div class="row">
