--- a/src/app/_layout/app/main/left-navigation/left-navigation.component.html
+++ b/src/app/_layout/app/main/left-navigation/left-navigation.component.html
@@ -3,11 +3,13 @@
     <ul class="nav metismenu" id="side-menu">
       <li class="nav-header">
         <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                            <img alt="image" class="img-circle" src="img/profile_small.jpg"/>
                              </span>
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">David Williams</strong>
-                             </span> <span class="text-muted text-xs block">Developer <b class="caret"></b></span> </span> </a>
+                            <span class="clear"> <span class="block m-t-xs"> <strong
+                              class="font-bold">David Williams</strong>
+                             </span> <span class="text-muted text-xs block">Developer <b
+                              class="caret"></b></span> </span> </a>
           <ul class="dropdown-menu animated fadeInRight m-t-xs">
             <li><a href="profile.html">Profile</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -32,18 +34,20 @@
 
 
       <li class="">
-        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Configuration</span> <span class="fa arrow"></span></a>
+        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Configuration</span> <span
+          class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
-          <li class="active"><a routerLink="/configuration/configuration-initializer">New</a></li>
-          <li class="active"><a routerLink="/configuration">List</a></li>
+          <li class="active"><a routerLink="/configuration/configuration-initializer">Create Service</a></li>
+          <li class="active"><a routerLink="/configuration">Service List</a></li>
+          <li class="active"><a routerLink="/configuration/cx-response">Customer Response</a></li>
         </ul>
       </li>
 
       <li class="">
-        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Service</span> <span class="fa arrow"></span></a>
+        <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">API</span> <span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
-          <li class="active"><a routerLink="/service/service-initializer">New</a></li>
-          <li class="active"><a routerLink="/service/service-list">List</a></li>
+          <li class="active"><a routerLink="/service/service-initializer">API Creator</a></li>
+          <li class="active"><a routerLink="/service/service-list">API List</a></li>
         </ul>
       </li>
 
@@ -51,7 +55,6 @@
       <li class="">
         <a href="/configuration/configuration-form"><i class="fa fa-th-large"></i> <span class="nav-label">Configuration Form</span></a>
       </li>
-
 
 
       <!-- <li class="">
